added sam app for lambda_function handler. Takes care of everything =) (#12)
* added sam app for lambda_function handler. Takes care of everything =)

* Update SAM app template to use single Contents Bucket

* update lambda function to work with single bucket

* updated cloudfront template to use single bucket scenario

* added baked_book_with_version.json event to events

* rename cloudformation template to single origin bucket

* added test event for content urls

* added SAM App to main README and added install instructions to sam-app README

* Add FIXME line to show that the unit test is no addressed in this PR.

--- a/app-output-sam.yaml
+++ b/app-output-sam.yaml
@@ -19,39 +19,21 @@ Resources:
       BucketName:
         Fn::Sub: ce-artifacts-${AWS::StackName}-${AWS::AccountId}
     Type: AWS::S3::Bucket
-  RawBucket:
+  ContentsBucket:
     DeletionPolicy: Delete
     Metadata:
       Comment: Bucket to store raw content data
     Properties:
       AccessControl: Private
       BucketName:
-        Fn::Sub: ce-raw-${AWS::StackName}-${AWS::AccountId}
+        Fn::Sub: ce-contents-${AWS::StackName}-${AWS::AccountId}
     Type: AWS::S3::Bucket
-  BakedBucket:
-    DeletionPolicy: Delete
-    Metadata:
-      Comment: Bucket to store baked content data
-    Properties:
-      AccessControl: Private
-      BucketName:
-        Fn::Sub: ce-baked-${AWS::StackName}-${AWS::AccountId}
-    Type: AWS::S3::Bucket
-  ResourcesBucket:
-    DeletionPolicy: Delete
-    Metadata:
-      Comment: Bucket to store resources referenced by content
-    Properties:
-      AccessControl: Private
-      BucketName:
-        Fn::Sub: ce-resources-${AWS::StackName}-${AWS::AccountId}
-    Type: AWS::S3::Bucket
-  RawBucketPolicy:
+  ContentsBucketPolicy:
     Metadata:
       Comment: Bucket policy to allow cloudfront to access the data
     Properties:
       Bucket:
-        Ref: RawBucket
+        Ref: ContentsBucket
       PolicyDocument:
         Statement:
         - Action:
@@ -63,50 +45,12 @@ Resources:
               - CfOriginAccessIdentity
               - S3CanonicalUserId
           Resource:
-          - Fn::Sub: arn:aws:s3:::${RawBucket}/*
-    Type: AWS::S3::BucketPolicy
-  BakedBucketPolicy:
-    Metadata:
-      Comment: Bucket policy to allow cloudfront to access the data
-    Properties:
-      Bucket:
-        Ref: BakedBucket
-      PolicyDocument:
-        Statement:
-        - Action:
-          - s3:GetObject
-          Effect: Allow
-          Principal:
-            CanonicalUser:
-              Fn::GetAtt:
-              - CfOriginAccessIdentity
-              - S3CanonicalUserId
-          Resource:
-          - Fn::Sub: arn:aws:s3:::${BakedBucket}/*
-    Type: AWS::S3::BucketPolicy
-  ResourcesBucketPolicy:
-    Metadata:
-      Comment: Bucket policy to allow cloudfront to access the data
-    Properties:
-      Bucket:
-        Ref: ResourcesBucket
-      PolicyDocument:
-        Statement:
-        - Action:
-          - s3:GetObject
-          Effect: Allow
-          Principal:
-            CanonicalUser:
-              Fn::GetAtt:
-              - CfOriginAccessIdentity
-              - S3CanonicalUserId
-          Resource:
-          - Fn::Sub: arn:aws:s3:::${ResourcesBucket}/*
+          - Fn::Sub: arn:aws:s3:::${ContentsBucket}/*
     Type: AWS::S3::BucketPolicy
   LambdaEdgeFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: s3://ce-artifacts-rap-distribution-373045849756/e98c68e886cf7b6bbca87d338b2b81d9
+      CodeUri: s3://ce-artifacts-rap-distribution-373045849756/dd50036dd2f987ee8dd9dea4726b471c
       Role:
         Fn::GetAtt:
         - LambdaEdgeFunctionRole
@@ -121,7 +65,7 @@ Resources:
       Path: /
       ManagedPolicyArns:
       - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
-      - arn:aws:iam::aws:policy/service-role/AmazonS3ReadOnlyAccess
+      - arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
@@ -166,10 +110,15 @@ Resources:
         HttpVersion: http1.1
         IPV6Enabled: false
         Origins:
-        - DomainName: aws.amazon.com
+        - DomainName:
+            Fn::GetAtt:
+            - ContentsBucket
+            - DomainName
           Id: MainOrigin
-          CustomOriginConfig:
-            OriginProtocolPolicy: match-viewer
+          OriginPath: ''
+          S3OriginConfig:
+            OriginAccessIdentity:
+              Fn::Sub: origin-access-identity/cloudfront/${CfOriginAccessIdentity}
         PriceClass: PriceClass_All
     Type: AWS::CloudFront::Distribution
   CfOriginAccessIdentity:
@@ -184,18 +133,10 @@ Outputs:
     Description: CE Artifacts S3 Bucket
     Value:
       Ref: ArtifactsBucket
-  RawBucket:
-    Description: CE Raw S3 Bucket
+  ContentsBucket:
+    Description: CE Book Contents S3 Bucket
     Value:
-      Ref: RawBucket
-  BakedBucket:
-    Description: CE Baked S3 Bucket
-    Value:
-      Ref: BakedBucket
-  ResourcesBucket:
-    Description: CE Resources S3 Bucket
-    Value:
-      Ref: ResourcesBucket
+      Ref: ContentsBucket
   LambdaEdgeFunction:
     Description: Lambda@Edge handler for content
     Value:
