--- a/cf-templates/firstrun-cloudfront-single-origin-bucket.yaml
+++ b/cf-templates/firstrun-cloudfront-single-origin-bucket.yaml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
-Description: 'Content Distribution'
+Description: 'CD DeleteMe'
 
 Parameters:
   Environment:
@@ -50,7 +50,7 @@ Resources:
   # LambdaEdgeFunction:
   #   Type: AWS::Serverless::Function
   #   Properties:
-  #     CodeUri: s3://ce-artifacts-content-distribution-373045849756/6cb9fb109d82fcc0cabfc93f98e23b08
+  #     CodeUri: s3://ce-artifacts-cd-deleteme-373045849756/6cb9fb109d82fcc0cabfc93f98e23b08
   #     Role: !GetAtt LambdaEdgeFunctionRole.Arn
   #     Runtime: python3.7
   #     Handler: lambda_function.lambda_handler
@@ -79,7 +79,7 @@ Resources:
   CfDistribution:
     Properties:
       DistributionConfig:
-        Comment: !Sub '${Environment} - Content Distribution'
+        Comment: !Sub '${Environment} - CD DeleteMe'
         DefaultCacheBehavior:
           # LambdaFunctionAssociations:
           #   - EventType: origin-request
