--- a/cf-templates/cloudfront-single-origin-bucket.yaml
+++ b/cf-templates/cloudfront-single-origin-bucket.yaml
@@ -16,7 +16,7 @@ Resources:
   ArtifactsBucket:
     DeletionPolicy: 'Delete'
     Metadata:
-      Comment: 'Bucket to store code artifacts'
+      Comment: 'Bucket to store code artifacts for distribution output producer'
     Properties:
       AccessControl: 'Private'
       BucketName: !Sub 'ce-artifacts-${AWS::StackName}-${AWS::AccountId}'
@@ -25,7 +25,7 @@ Resources:
   ContentsBucket:
     DeletionPolicy: 'Delete'
     Metadata:
-      Comment: 'Bucket to store raw content data'
+      Comment: 'Bucket to store distribution content data for distribution output producer'
     Properties:
       AccessControl: 'Private'
       BucketName: !Sub 'ce-contents-${AWS::StackName}-${AWS::AccountId}'
@@ -33,7 +33,7 @@ Resources:
 
   ContentsBucketPolicy:
     Metadata:
-      Comment: 'Bucket policy to allow cloudfront to access the data'
+      Comment: 'Bucket policy to allow cloudfront to access the data for content distribution'
     Properties:
       Bucket: !Ref ContentsBucket
       PolicyDocument:
@@ -47,43 +47,11 @@ Resources:
               - !Sub 'arn:aws:s3:::${ContentsBucket}/*'
     Type: 'AWS::S3::BucketPolicy'
 
-  LambdaEdgeFunction:
-    Type: AWS::Serverless::Function
-    Properties:
-      CodeUri: ../.aws-sam/LambdaEdgeFunction/
-      Role: !GetAtt LambdaEdgeFunctionRole.Arn
-      Runtime: python3.7
-      Handler: lambda_function.lambda_handler
-      Timeout: 5
-      AutoPublishAlias: live
-
-  LambdaEdgeFunctionRole:
-    Type: AWS::IAM::Role
-    Properties:
-      Path: "/"
-      ManagedPolicyArns:
-        - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
-        - "arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess"
-      AssumeRolePolicyDocument:
-        Version: "2012-10-17"
-        Statement:
-          - Sid: "AllowLambdaServiceToAssumeRole"
-            Effect: "Allow"
-            Action:
-              - "sts:AssumeRole"
-            Principal:
-              Service:
-                - "lambda.amazonaws.com"
-                - "edgelambda.amazonaws.com"
-
   CfDistribution:
     Properties:
       DistributionConfig:
         Comment: !Sub '${Environment} - Content Distribution'
         DefaultCacheBehavior:
-          LambdaFunctionAssociations:
-            - EventType: origin-request
-              LambdaFunctionARN: !Ref LambdaEdgeFunction.Version
           AllowedMethods:
             - 'HEAD'
             - 'GET'
@@ -130,11 +98,8 @@ Outputs:
   ContentsBucket:
     Description: 'CE Book Contents S3 Bucket'
     Value: !Ref ContentsBucket
-  LambdaEdgeFunction:
-    Description: Lambda@Edge handler for content
-    Value: !Ref LambdaEdgeFunction.Version
   CfDistributionId:
-    Description: 'Id for our cloudfront distribution'
+    Description: 'ID for our cloudfront distribution'
     Value: !Ref CfDistribution
   CfDistributionDomainName:
     Description: 'Domain name for our cloudfront distribution'
